<resources>
    <string name="app_name">Library</string>
    <string name="itemiconincards">itemIconInCards</string>
    <string name="currentPositionMyLibraryText">Библиотека</string>
    <string name="currentPositionGoogleBooksText">Google Books</string>
    <string name="recyclerMainDescription">Лист с предметами хранящимися в библиотеке</string>
    <string name="selected_item_icon">Selected item icon</string>
    <string name="text_for_current_item_description">Text for current item description</string>
    <string name="selected_item_view_description_top">Описание</string>
    <string name="buttonOnMainForAddItems">Кнопка для добавления элементов</string>
    <string name="selectedItemEnterName">Введите название</string>
    <string name="selectedItemEnterId">Введите Id</string>
    <string name="selectedItemNameTop">Название</string>
    <string name="saveElementButton">Сохранить</string>
    <string name="addBookText">Книга</string>
    <string name="addNewspaperText">Газета</string>
    <string name="addDiscText">Диск</string>
    <string name="bottomSheetDialogMainUpText">Добавить предмет в библиотеку</string>

<!--  DetailFragment sources  -->
    <string name="saveButtonCreateType">Сохранить</string>
    <string name="saveButtonShowType">Назад</string>
    <string name="noNameAndIdCreateType">Неверные название и ID</string>
    <string name="noNameCreateType">Неверное название</string>
    <string name="noIdCreateType">Неверный ID</string>
    <string name="all_items">All Items</string>
    <string name="detail_screen">Detail screen</string>
    <string name="emptyFragmentText">Выбери элемент или создайте свой</string>
    <string name="detailFragmentErrorText">Неизвестная ошибка, попробуйте ещё раз</string>
    <string name="recyclerMainNoElementsText">Элементов нет\nДобавьте или обновите список</string>
    <string name="sortitemsbuttonforrecycler">sortItemsButtonForRecycler</string>

    // Menu for select sort
    <string name="recycler_sort_menu_byTimeText">По времени добавления</string>
    <string name="recycler_sort_menuByName">По названию</string>
    <string name="recycler_sort_menuDefault">Порядок по умолчанию</string>

    <string name="libraryButtonText">В Библиотеку</string>
    <string name="googleBooksButtonText">В Google Books</string>

    // Filters for Request Google Books
    <string name="FiltersForRequestFieldAuthor">Автор:</string>
    <string name="FiltersForRequestFieldAuthorHilt">Введите имя автора</string>
    <string name="FiltersForRequestFieldTitle">Заголовок:</string>
    <string name="FiltersForRequestFieldTitleHilt">Введите заголовок</string>
    <string name="buttonStartSearchGoogleBooksText">Поиск в Google Books</string>
    <string name="buttonClearFiltersGoogleBooksText">Очистить</string>
</resources>