<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addBookText"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetDialogMainUpText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addNewspaper"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/addNewspaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewspaperText"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetDialogMainUpText"
        app:layout_constraintStart_toEndOf="@id/addBook"
        app:layout_constraintEnd_toStartOf="@id/addDisk"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/addDisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/addDiscText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addNewspaper"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetDialogMainUpText"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/bottomSheetDialogMainUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bottomSheetDialogMainUpText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>